# sobotify

./: LICENSE  README.md  install.bat  pyproject.toml  requirements.txt  setup.py  start_app.bat  start_gesture.bat  update.bat
examples/: debate_partner.py  extract_gesture_speech.bat  facial_processing.bat  grammar_check.py  grammar_ckeck.bat  hello_nao.bat  hello_pepper.bat  hello_stickman.bat  play_nao.bat  play_pepper.bat  play_stickman.bat  quiz.py  start_chat_partner.bat  start_debate_partner.bat  start_quiz.bat
scripts/: analyze_video.bat  debate_partner.py  install.bat  play_pepper.bat  play_stickman.bat  start_debate_partner.bat  start_gpt.bat
sobotify/: sobotify.py  sobotify_app_gui.py  sobotify_gesture_gui.py
sobotify/apps/chat_partner/: chat_partner.py  chat_partner.xlsx  read_project_data.py
sobotify/apps/dialog_training/: dialog_training.py  dialog_training.xlsx  read_project_data.py
sobotify/apps/quiz/: quiz.py  quiz_english.xlsx  quiz_german.xlsx  read_project_data.py  start_quiz.bat
sobotify/apps/simple_mqtt/: simple_mqtt.py  simple_mqtt.xlsx  start_simple_mqtt.bat
sobotify/apps/teleoperation/: read_project_data.py  teleoperation.py  teleoperation.xlsx
sobotify/commons/: logger.py  mqttclient.py  speak.py
sobotify/robotcontrol/: robotcontrol.py
sobotify/robotcontrol/data/: random.srt  random_cozmo.csv  random_lmarks.csv  (+5 more)
sobotify/robots/: robot.py  robots.py
sobotify/tools/: chatbot.py  emotion_detection.py  facial_processing.py  grammar_checking.py  llm_processor.py  logger.py  mosquitto.conf  speech_recognition.py  teleoperator.py
(+25 files in other folders)
