[project]
name = "sobotify"
version = "0.0.2"
authors = [
    {name="Heiko Hübert"}
]
readme = "README.md"
description = "sobotify is a framework for turning a robot into a social robot"
classifiers = [
    "Programming Language :: Python",
    "Operating System :: Microsoft :: Windows"
]

[project.urls]
"Homepage" = "https://github.com/hhuebert/sobotify"